fix: se refactoriza UI de inicio

--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -54,6 +54,12 @@ import RemoteImage, {profileImage} from '../atoms/RemoteImage.astro';
 				<div class="mb-6">
 					<SocialLinks size="md" class="space-x-3 [&_a]:text-gray-300 [&_a]:hover:text-white" />
 				</div>
+
+				<ol>
+					<li class="text-white hover:text-gray-300 font-medium transition-colors duration-200 mb-2">
+						<a href="sobre-mi">Sobre mí 👋🏽</a>
+					</li>
+				</ol>
 				
 				<!-- CTA Button -->
 				<Button variant="primary" size="md" href="/proyectos" class="w-full">
