fix: se modifica informacion para home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,14 +80,14 @@ const latestPosts = (await getCollection("posts")).sort((a: any, b: any) =>
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 			<div class="text-center mb-12">
 				<Heading level={2} size="3xl" class="mb-4">
-					¿Qué hago?
+					¿De qué puedes hablar conmigo?
 				</Heading>
 				<Text color="secondary" size="lg" class="max-w-2xl mx-auto">
-					Mi experiencia abarca tanto el desarrollo de software como la gestión de infraestructura tecnológica.
+					Podemos conversar sobre conocimientos y experiencias en tecnología, por ejemplo sobre los siguientes temas:
 				</Text>
 			</div>
 			
-			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-5">
 				<Card
 					title="💻 Desarrollo Full Stack"
 					body="Diseño y programación de aplicaciones web y móviles, desde la idea hasta el despliegue en producción."
